--- a/data_processing/join_review.ipynb
+++ b/data_processing/join_review.ipynb
@@ -25717,13 +25717,7 @@
       "28002    kellogg's eggo nutri-grain frozen fruit pizza ...\n",
       "16613    mornngstr frms brkfst sandwich ssge egg&chs en...\n",
       "93604                                                 eggs\n",
-      "Name: desc, dtype: object\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Name: desc, dtype: object\n",
       "[('pace cilantro chunky salsa', 100, 6598), ('cilantro', 100, 11165), ('taro chips', 56, 19524), ('walnut oil', 56, 4528), ('sheanut oil', 53, 4536)]\n",
       "[('black pepper', 100, 2030), ('salt and black pepper', 100, 93602), ('white pepper', 67, 2032), ('beans black mature seeds ckd bld with salt', 65, 16315), ('beans black mature seeds ckd bld without salt', 65, 16015)]\n",
       "[('oil cocoa butter', 100, 4501), ('butter with salt', 100, 1001), ('butter croissants', 100, 18239), ('oil nutmeg butter', 100, 4572), ('oil ucuhuba butter', 100, 4573)]\n",
@@ -25824,7 +25818,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
